--- a/src/index.css
+++ b/src/index.css
@@ -19,33 +19,29 @@
   margin-bottom: 30px;
 }
 
-.cards {
-  width: 100%;
-  height: auto;
+.card_img {
+  max-width: 100%;
+  height: 400px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
 }
-
+.container {
+  display: inline-flex;
+  justify-content: center;
+  min-width: 20%;
+  margin: 2%;
+  align-items: center;
+}
 .card {
-  margin-left: 12%;
-  margin-top: 6%;
-  margin-bottom: 2%;
-  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
-  background-color: #fff;
-  width: 18%;
+  max-width: 700px;
+  transition: all 1s cubic-bezier(0.175, 0.885, 0, 1);
   border-radius: 12%;
   box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
-  float: left;
 }
 
 .card:hover {
   box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
   transform: scale(1.05, 1.05);
-}
-
-.card_img {
-  width: 100%;
-  height: 435px;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
 }
 
 .card_info {
@@ -60,9 +56,7 @@
   font-size: 13px;
   letter-spacing: 2px;
   font-weight: 600;
-  display: grid;
-  place-items: center;
-  /* margin-left: 20px; */
+  margin-left: 30px;
 }
 
 .card_title {
@@ -85,6 +79,7 @@ button {
   border: 1px solid black;
   cursor: pointer;
   border-radius: 20px;
+  margin-bottom: 20px;
 }
 button:hover {
   background-color: tomato;
